# lab_5

./: CMakeLists.txt
include/: complex_type.h  dynamic_array.h  memory_resource.h
src/: complex_type.cpp  main.cpp  memory_resource.cpp
tests/: tests.cpp
